--- a/index.html
+++ b/index.html
@@ -479,10 +479,11 @@ tableau_sortie.forEach(function(element)
 				       
 			}
 		      )
-for (let i=0 ; i < part_croisee.length; i++)
-	{
-	console.log(part_croisee[i]);
-	}
+
+
+console.log(part_interne);
+console.log(part_croisee);
+
 }
 	
 </script>
