--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ var part_interne = 0;
 var part_croisee = 0;
 tableau_sortie.forEach(function(element)
 		       {
-			for (let k=0 ; k < 1; k++)
+			for (let k=0 ; k < type_act.length; k++)
 					{
 				 	for (let l=k ; l < type_act.length; l++)
 						{
