--- a/index.html
+++ b/index.html
@@ -479,11 +479,11 @@ tableau_sortie.forEach(function(element,index)
 						{
 						if (l == k)
 							{
-							part_croisee[k][l] += (eval('element' + '.' + type_act[k]) > 0 && eval('element' + '.' + type_act[l]) > 0);
+							part_croisee[k][l] += (eval('element' + '.' + type_act[k] > 0) && eval('element' + '.' + type_act[l] > 0));
 							}
 						else
 							{
-							part_croisee[k][l] += (eval('element' + '.' + type_act[k]) > 0 && eval('element' + '.' + type_act[l]) > 0);
+							part_croisee[k][l] += (eval('element' + '.' + type_act[k] > 0) && eval('element' + '.' + type_act[l] > 0));
 							}
 							
 						}
