--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@ tableau_sortie.forEach(function(element,index)
 						if (l == k)
 							{
 							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0'));
+							break;
 							}
 						else
 							{
