--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@ tableau_sortie.forEach(function(element,index)
 					{
 				 	for (let l=k ; l < type_act.length; l++)
 						{
+						console.log(k + ' ' + l);
 						if (l === k)
 							{
 							console.log(k + ' ' + eval('element' + '.' + type_act[k] + '> 0'));
