--- a/index.html
+++ b/index.html
@@ -480,14 +480,12 @@ tableau_sortie.forEach(function(element,index)
 						console.log(k + ' ' + l);
 						if (l === k)
 							{
-							console.log(k + ' ' + eval('element' + '.' + type_act[k] + '> 0'));
-							console.log(l + ' ' + eval('element' + '.' + type_act[l] + '> 0'));	    
+							console.log(k + ' ' + l + ' ' + eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0'));	    
 							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0'));
 							}
 						else
 							{
-							console.log(k + ' ' + eval('element' + '.' + type_act[k] + '> 0'));
-							console.log(l + ' ' + eval('element' + '.' + type_act[l] + '> 0'));
+							console.log(k + ' ' + l + ' ' + eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0'));	
 							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0'));
 							}
 							
