--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@ tableau_sortie.forEach(function(element,index)
 							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 							
-						}	
+						}
+					console.log(part_croisee[k];
 					}
 			console.log(part_croisee);
 			}
