--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ tableau_sortie.forEach(function(element,index)
 							}
 							
 						}
-					console.log(part_croisee[k];
+					console.log(part_croisee[k]);
 					}
 			console.log(part_croisee);
 			}
