--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@ tableau_sortie.forEach(function(element,index)
 							
 						}
 					console.log(part_croisee[k]);
+					console.log(part_croisee);
 					}
 			console.log(part_croisee);
 			}
