--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@ for (let i=0 ; i < type_act.length; i++)
 part_croisee[i] = composante;
 }
 
-tableau_sortie.forEach(function(element,index)
+for (let i=0 ; i < tableau_sortie.length; i++)
 		       {
-			if (index <= 0)
+			if (i <= 0)
 			{
 			for (let k=0 ; k < type_act.length; k++)
 					{
@@ -480,11 +480,11 @@ tableau_sortie.forEach(function(element,index)
 						console.log(k + ' ' + l);
 						if (l === k)
 							{
-							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
+							part_croisee[k][l] += (eval(tableau_sortie[i) + '.' + type_act[k] + '> 0' + ' && ' + tableau_sortie[i) + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 						else
 							{
-							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
+							part_croisee[k][l] += (eval(tableau_sortie[i) + '.' + type_act[k] + '> 0' + ' && ' + tableau_sortie[i) + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 							
 						}
