--- a/index.html
+++ b/index.html
@@ -480,11 +480,11 @@ for (let i=0 ; i < tableau_sortie.length; i++)
 						console.log(k + ' ' + l);
 						if (l === k)
 							{
-							part_croisee[k][l] += (eval(tableau_sortie[i) + '.' + type_act[k] + '> 0' + ' && ' + tableau_sortie[i) + '.' + type_act[l] + '> 0') ? 1 : 0);
+							part_croisee[k][l] += (eval(tableau_sortie[i] + '.' + type_act[k] + '> 0' + ' && ' + tableau_sortie[i] + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 						else
 							{
-							part_croisee[k][l] += (eval(tableau_sortie[i) + '.' + type_act[k] + '> 0' + ' && ' + tableau_sortie[i) + '.' + type_act[l] + '> 0') ? 1 : 0);
+							part_croisee[k][l] += (eval(tableau_sortie[i] + '.' + type_act[k] + '> 0' + ' && ' + tableau_sortie[i] + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 							
 						}
