--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ for (let i=0 ; i < tableau_sortie.length; i++)
 		       {
 			if (i <= 0)
 			{
-			console.log(eval(tableau_sortie[i].type_act[0]));
+			console.log(eval(tableau_sortie[i] +'.' + type_act[0]));
 			for (let k=0 ; k < type_act.length; k++)
 					{
 				 	for (let l=k ; l < type_act.length; l++)
