--- a/index.html
+++ b/index.html
@@ -480,11 +480,11 @@ tableau_sortie.forEach(function(element,index)
 						console.log(k + ' ' + l);
 						if (l === k)
 							{
-							part_croisee[k][l] += (eval(element + '.' + type_act[k] + '> 0' + ' && ' + element + '.' + type_act[l] + '> 0') ? 1 : 0);
+							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 						else
 							{
-							part_croisee[k][l] += (eval(element + '.' + type_act[k] + '> 0' + ' && ' + element + '.' + type_act[l] + '> 0') ? 1 : 0);
+							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 							
 						}
