--- a/index.html
+++ b/index.html
@@ -464,10 +464,6 @@ for (let i=0 ; i < type_act.length; i++)
 {
 composante[i] = 0;
 }
-for (let i=0 ; i < type_act.length; i++)
-{
-part_croisee[i] = composante;
-}
 
 tableau_sortie.forEach(function(element,index)
 		       {
@@ -480,17 +476,16 @@ tableau_sortie.forEach(function(element,index)
 						console.log(k + ' ' + l);
 						if (l === k)
 							{
-							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
+							composante[l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 						else
 							{
-							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
+							composante[l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 							
 						}
-					console.log(k);
-					console.log(part_croisee[k]);
-					console.log(part_croisee);
+					
+					console.log(composante);
 					}
 			console.log(part_croisee);
 			}
