--- a/index.html
+++ b/index.html
@@ -473,6 +473,11 @@ tableau_sortie.forEach(function(element,index)
 					{
 				 	for (let l=k ; l < type_act.length; l++)
 						{
+						var composante = [];
+						for (let i=0 ; i < type_act.length; i++)
+						{
+						composante[i] = 0;
+						}
 						console.log(k + ' ' + l);
 						if (l === k)
 							{
