--- a/index.html
+++ b/index.html
@@ -464,9 +464,11 @@ for (let i=0 ; i < type_act.length; i++)
 {
 composante[i] = 0;
 }
+console.log(composante);
 for (let i=0 ; i < type_act.length; i++)
 {
 part_croisee.push(composante);
+console.log(part_croisee);
 }
 
 console.log(part_croisee);
