--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 
 var part_croisee = [];
 var composante = [];
+var tmp ;
 for (let i=0 ; i < type_act.length; i++)
 {
 composante[i] = 0;
@@ -468,10 +469,7 @@ console.log(composante);
 for (let i=0 ; i < type_act.length; i++)
 {
 part_croisee.push(composante);
-console.log(part_croisee);
 }
-
-console.log(part_croisee);
 
 tableau_sortie.forEach(function(element,index)
 		       {
@@ -487,12 +485,17 @@ tableau_sortie.forEach(function(element,index)
 							console.log(part_croisee[k][l]);
 							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							console.log(part_croisee[k][l]);
+							if (k < type_act.length - 1)
+							{
+							console.log(part_croisee[k+1][l]);
+							}
 							}
 						else
 							{
 							console.log(part_croisee[k][l]);
 							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							console.log(part_croisee[k][l]);
+								
 							}
 							
 						}
