--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ for (let i=0 ; i < type_act.length; i++)
 {
 for (let j=0 ; j < type_act.length; j++)
 {
-part_croisee[i].push(0);
+part_croisee[i].push('0');
 }
 }
 
