--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 // on génère les éléments de participation croisée aux différentes activités
 
 var part_croisee = [];
+var part_totale = [];
 
 for (let i=0 ; i < type_act.length; i++)
 {
@@ -466,6 +467,7 @@ var tmp = [];
 for (let j=0 ; j < type_act.length; j++)
 {
 tmp.push(0);
+part_totale.push(0);
 }
 part_croisee.push(tmp);
 }
@@ -479,6 +481,7 @@ tableau_sortie.forEach(function(element,index)
 						{
 						if (l === k)
 							{
+							part_totale[k] =+  (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 						else
@@ -491,7 +494,7 @@ tableau_sortie.forEach(function(element,index)
 		       )
 
 console.log(part_croisee);
-		      
+console.log(part_totale);		      
 
 
 }
