--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ tableau_sortie.forEach(function(element,index)
 						{
 						if (l === k)
 							{
-							part_totale[k] =+  (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
+							part_totale[k] +=  (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							part_croisee[k][l] += (eval('element' + '.' + type_act[k] + '> 0' + ' && ' + 'element' + '.' + type_act[l] + '> 0') ? 1 : 0);
 							}
 						else
