--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ for (let k=0 ; k < type_act.length; k++)
 							}
 						else
 							{
-							part_croisee[k][l] = Number.parseFloat(xpart_croisee[k][l] / (denominateur) * 100).toFixed(2);
+							part_croisee[k][l] = Number.parseFloat(part_croisee[k][l] / (denominateur) * 100).toFixed(1);
 							}
 						}
 					}
