--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ tableau_sortie.forEach(function(element,index)
 // on reconstruit le tableau pour générer les pourcentages souhaités
 for (let k=0 ; k < type_act.length; k++)
 					{
-				 	for (let l=k ; l < type_act.length; l++)
+				 	for (let l=0 ; l < type_act.length; l++)
 						{
 						var denominateur = (part_totale[k] > 0 ? part_totale[k] : 1);
 						if (l < k)
@@ -520,8 +520,7 @@ for (let k=0 ; k < type_act.length; k++)
 					}
 
 console.log(part_croisee);
-console.log(part_totale);		      
-
+console.log(part_totale);
 
 }
 	
