--- a/index.html
+++ b/index.html
@@ -532,8 +532,19 @@ for (let i=0 ; i < type_act.length ; i++)
         resizeable: true
     				});
 	}
+for (let i=0 ; i < type_act.length ; i++)
+	{
+console.log(donnees_graphiques[i].from);
+	}
 
-console.log(donnees_graphiques);
+var test = [
+    { from: "1", to: "leaving", value: 6 },
+    { from: "2", to: "leaving", value: 4 },  
+    { from: "2", to: "res", value: 1 },
+    { from: "2", to: "ser", value: 2 }
+	  ]
+
+console.log(test);
 
 }
 	
