--- a/index.html
+++ b/index.html
@@ -522,14 +522,11 @@ for (let k=0 ; k < type_act.length; k++)
 console.log(part_croisee);
 console.log(part_totale);
 
-function creation_objet(from, value) {
-  this.from = from;
-  this.value = value;
-}
+
 var donnees_graphiques = [];
 for (let i=0 ; i < type_act.length ; i++)
 	{
-	var obj = new creation_objet(type_act[i], '1');
+	var obj = {from : type_act[i], value : 1};
 	console.log(obj);
 	donnees_graphiques.push(obj);
 	}
