--- a/index.html
+++ b/index.html
@@ -184,9 +184,7 @@ container_2.height = am4core.percent(100);
 container_2.layout = "horizontal";
 
 
-</script>
-
-<div id="chartdiv_test"></div>		
+</script>	
 	
 <ul>
 <li>survoler les secteurs des graphiques pour visualiser le nombre d'adresses recensées</li>
@@ -200,7 +198,11 @@ container_2.layout = "horizontal";
 		
 <div id="chartdiv_2" style="height:500px"></div>
 
+<ul>
+<li>pour chaque activité, pourcentage de participation aux autres activités</li>
+</ul>
 
+<div id="chartdiv_test" style="height:500px"></div>	
 		
 <!--on ajoute des listeners qui font apparaître-disparaître les choix possibles pour chaque filtre-->
 <script>
