--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ console.log(part_totale);
 
 var donnees_graphiques = [];
 
-for (let i=0 ; i < 1 ; i++)
+for (let i=0 ; i < type_act.length ; i++)
 	{
 	var donnees_graphique = [];
 	for (let j=0 ; j < type_act.length ; j++)
