--- a/index.html
+++ b/index.html
@@ -591,15 +591,15 @@ chart.events.on("ready", function() {
         var link = chart.links.getIndex(i);
         var bullet = link.bullets.getIndex(0);
 
-        animateBullet(bullet,i);
+        animateBullet(bullet,i,index);
     }
 })
 
-function animateBullet(bullet,num_lien) {
+function animateBullet(bullet,num_lien,index) {
     var duration = 2000;
     var animation = bullet.animate([{ property: "locationX", from: 0, to: (num_lien === index+1 ? 0.5 : 1) }], duration)
     animation.events.on("animationended", function(event) {
-        animateBullet(event.target.object);
+        animateBullet(event.target.object,num_lien,index);
     })
 }
 }
