--- a/index.html
+++ b/index.html
@@ -601,6 +601,10 @@ title.marginBottom = 5;
 chart.innerRadius = am4core.percent(95);
 chart.data = donnees_graphiques[index];
 chart.nodes.template.label.fontSize = 9;
+if (index == 1)
+{
+console.log(chart.nodes);
+}
 
 chart.dataFields.fromName = "from";
 chart.dataFields.toName = "to";
