--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ chart.data = donnees_graphiques[index];
 chart.nodes.template.label.fontSize = 9;
 if (index == 1)
 {
-console.log(chart.nodes);
+console.log(chart.nodes.length);
 }
 
 chart.dataFields.fromName = "from";
