--- a/index.html
+++ b/index.html
@@ -638,9 +638,9 @@ function animateBullet(bullet,num_lien,index) {
     var duration = 2000;
     if (num_lien === index)
     {
-    var animation = bullet.animate([{ property: "locationX", from: 0.5, to: 0.5 }], duration/2);
-    var animation_2 = bullet.animate([{ property: "locationX", from: 0.5, to: 1 }], duration/2);    
+    setInterval(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1 }], duration/2);,duration/2);   
     }
+    /*
     else if (num_lien === index+1)
     {
     var animation = bullet.animate([{ property: "locationX", from: 0, to: 0.5 }], duration/2);
@@ -652,10 +652,7 @@ function animateBullet(bullet,num_lien,index) {
     var animation_2 = bullet.animate([{ property: "locationX", from: 0.5, to: 1 }], duration/2); 
     // var animation = bullet.animate([{ property: "locationX", from: (num_lien === index || num_lien === index+1 ? 0 : 0.5), to: (num_lien === index+1 ? 0.5 : 1) }], duration)
     }
-    animation_2.events.on("animationended", function(event) {
-        animateBullet(event.target.object,num_lien,index);
-
-    })
+    animation_2.events.on("animationended", function(event) {animateBullet(event.target.object,num_lien,index);}) */
 }
 }
 )
