--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ function animateBullet(bullet,num_lien,index) {
     var duration = 2000;
     if (num_lien === index)
     {
-    setInterval(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1 }], duration/2);,duration/2);   
+    setInterval(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1 }], duration/2);},duration/2);   
     }
     /*
     else if (num_lien === index+1)
