--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ console.log(donnees_graphiques);
 
 type_act.forEach(function(element,index)
 {
-if (part_totale[index} > 0)
+if (part_totale[index] > 0)
 {
 am4core.ready(function() {
 // Themes begin
