--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ function animateBullet(bullet,num_lien,index) {
     
     else if (num_lien === index+1)
     {
-    setInterval(function() {bullet.animate([{ property: "locationX", from: 0.0, to: 0.5 }], duration/2);},duration/2);   
+    setInterval(function() {bullet.animate([{ property: "locationX", from: 0.0, to: 0.5 }], duration/2);},duration/2+1000);   
     }
     else
     {
