--- a/index.html
+++ b/index.html
@@ -638,6 +638,7 @@ function animateBullet(bullet,num_lien,index) {
     var duration = 3000;
     if (num_lien === index)
     {
+    setInterval(function() {},duration/2);   
     setInterval(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1.0 }], duration/2);},duration/2);   
     }
     
