--- a/index.html
+++ b/index.html
@@ -594,13 +594,14 @@ var chart = container_5.createChild(am4charts.ChordDiagram);
 
 var title = chart.titles.create();
 title.text = "Participation depuis l'activité " + type_act[index];
-title.fontSize = 10;
+title.fontSize = 11;
 title.fontWeight = 600;
 title.marginBottom = 5;
 	
 chart.innerRadius = am4core.percent(95);
 chart.data = donnees_graphiques[index];
 chart.nodes.template.label.fontSize = 9;
+chart.nodes.template.label.fontWeight = 400;
 
 chart.dataFields.fromName = "from";
 chart.dataFields.toName = "to";
