--- a/index.html
+++ b/index.html
@@ -639,14 +639,12 @@ function animateBullet(bullet,num_lien,index) {
     var duration = 3000;
     if (num_lien === index)
     {
-    setInterval(function() {},duration/2);   
-    setInterval(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1.0 }], duration/2);},duration/2);   
+    setTimeout(function {setInterval(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1.0 }], duration/2);},duration/2);},duration/2);}
     }
     
     else if (num_lien === index+1)
     {
-    setInterval(function() {bullet.animate([{ property: "locationX", from: 0.0, to: 0.5 }], duration/2);},duration/2); 
-    setInterval(function() {},duration/2);   
+    setInterval(function() {bullet.animate([{ property: "locationX", from: 0.0, to: 0.5 }], duration/2);},duration);
     }
     else
     {
