--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@ function animateBullet(bullet,num_lien,index) {
     var duration = 3000;
     if (num_lien === index)
     {
-    setInterval(function() {setTimeout(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1.0 }], duration/2);},duration/2);},duration/2);
+    setInterval(function() {setTimeout(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1.0 }], duration/2);},duration/2);},duration);
     }
     else if (num_lien === index+1)
     {
